# qr-bench

./: .gitmodules  CMakeLists.txt  README.md
src/: qrcode-base.h  qrcode-bench.cpp  qrcode-quirc.cpp  qrcode-quirc.h
